--- a/ex022/fundo006/fundo006.html
+++ b/ex022/fundo006/fundo006.html
@@ -10,15 +10,23 @@
             font-size: 62.5%;
         }
         body {
+            height: 100vh;
+            /*
             background-color: #242423;
-            background-image: url('/ex022/img/pexels-ken-cheung-6295891-1920px.png');
+            background-image: url('/ex022/img/wallpaper002.jpg');
             background-position: center center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
+            */
+            background: #242423 url('/ex022/img/pexels-ken-cheung-6295891-1920px.png') center center no-repeat fixed;
+            background-size: cover;
         }
 
         main {
             background-color: #E8EDDF;
             color: #333533;
-            width: 40rem;
+            max-width: 40rem;
             font-size: 1.6rem;
             padding: .5rem 1.5rem 1rem;
             margin: auto;
@@ -29,6 +37,14 @@
 <body>
     <main>
         <h1>Teste de fundo</h1>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum officiis ratione laudantium voluptate perspiciatis non ea. Odit, dolore at explicabo nostrum quis eos debitis aperiam deleniti, ut repellat nam. Dolorem?</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum officiis ratione laudantium voluptate perspiciatis non ea. Odit, dolore at explicabo nostrum quis eos debitis aperiam deleniti, ut repellat nam. Dolorem?</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum officiis ratione laudantium voluptate perspiciatis non ea. Odit, dolore at explicabo nostrum quis eos debitis aperiam deleniti, ut repellat nam. Dolorem?</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum officiis ratione laudantium voluptate perspiciatis non ea. Odit, dolore at explicabo nostrum quis eos debitis aperiam deleniti, ut repellat nam. Dolorem?</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum officiis ratione laudantium voluptate perspiciatis non ea. Odit, dolore at explicabo nostrum quis eos debitis aperiam deleniti, ut repellat nam. Dolorem?</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum officiis ratione laudantium voluptate perspiciatis non ea. Odit, dolore at explicabo nostrum quis eos debitis aperiam deleniti, ut repellat nam. Dolorem?</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum officiis ratione laudantium voluptate perspiciatis non ea. Odit, dolore at explicabo nostrum quis eos debitis aperiam deleniti, ut repellat nam. Dolorem?</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum officiis ratione laudantium voluptate perspiciatis non ea. Odit, dolore at explicabo nostrum quis eos debitis aperiam deleniti, ut repellat nam. Dolorem?</p>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum officiis ratione laudantium voluptate perspiciatis non ea. Odit, dolore at explicabo nostrum quis eos debitis aperiam deleniti, ut repellat nam. Dolorem?</p>
     </main>
 </body>
